# dbgscript

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  common.cmake  deploy.bat  index.html  install.bat  lockdownnotes.md  make_prj.bat  providers.reg  releasenotes.md  releasenotes.txt
css/: style.css
docs/: Basics.rst  Installation.rst  Lua.rst  Makefile  Process.rst  Python.rst  Reference.rst  Ruby.rst  Tutorial.rst  conf.py  index.rst  make.bat
docs/Lua/: StackFrame.rst  Thread.rst  TypedObject.rst  dbgscript.rst
docs/Python/: Classes.rst  StackFrame.rst  Thread.rst  Tips.rst  TypedObject.rst  dbgscript.rst
docs/Python/Classes/: Process.rst  Thread.rst  TypedObject.rst
docs/Ruby/: DbgScript.rst  StackFrame.rst  Thread.rst  Tips.rst  Tutorial.rst  TypedObject.rst
docs/_static/: customstyle.css
docs/_templates/: layout.html
docs/shared/: StackFrame_preamble.txt  Thread_preamble.txt  TypedObject_preamble.txt  create_typed_object.txt  create_typed_pointer.txt  dbgscript_mod.txt  get_global.txt  start_buffering.txt  stop_buffering.txt
include/: dserrors.h  dsstackframe.h  dsthread.h  dstypedobject.h  hostcontext.h  iscriptprovider.h
less/: style.less
samples/: commands.txt
samples/cpp/: dummy1.cpp
samples/lua/: deref.lua  execCmd.lua  fieldOffset.lua  getPeb.lua  getRuntimeType.lua  global.lua  readBytes.lua  readString.lua  readptr.lua  resolveenum.lua  stack.lua  test.lua  thread.lua  typobj.lua
samples/py/: ansiString.py  create_typed_object.py  fieldOffset.py  getPeb.py  getRuntimeObj.py  obj_traversal.py  pdbtest.py  readBytes.py  stack_test.py  test.py  typedobj.py  utruntime.py
samples/rb/: ansiString.rb  fieldOffset.rb  getPeb.rb  getRuntimeObj.rb  readBytes.rb  simple.rb  stack_test.rb  typedobj.rb
src/: cmdline.cpp  cmdline.h  common.h  dllmain.cpp  outputcallback.cpp  outputcallback.h  pythonscriptprovider.cpp  pythonscriptprovider.h  rubyscriptprovider.cpp  scriptprovhelper.cpp  symcache.cpp  symcache.h  util.cpp  util.h  vercommon.h  version.h
src/luaprov/: CMakeLists.txt  classprop.cpp  classprop.h  common.h  dbgscript.cpp  dbgscript.h  dllmain.cpp  luascriptprovider.cpp  stackframe.cpp  stackframe.h  thread.cpp  thread.h  typedobject.cpp  typedobject.h  util.cpp  util.h  version.h  version.rc
src/pythonprov/: CMakeLists.txt  common.h  dbgscript.cpp  dbgscript.h  dbgscriptio.cpp  dbgscriptio.h  dbgscriptout.cpp  dbgscriptout.h  dllmain.cpp  process.cpp  process.h  pythonprop.props  pythonprov.vcxproj  pythonprov.vcxproj.filters  pythonscriptprovider.cpp  pythonscriptprovider.h  stackframe.cpp  stackframe.h  symbol.cpp  symbol.h  thread.cpp  thread.h  typedobject.cpp  typedobject.h  util.cpp  util.h  version.h  version.rc
src/rubyprov/: CMakeLists.txt  common.h  dbgscript.cpp  dbgscript.h  dllmain.cpp  rubyprop.props  rubyprov.vcxproj  rubyprov.vcxproj.filters  rubyscriptprovider.cpp  stackframe.cpp  stackframe.h  thread.cpp  thread.h  typedobject.cpp  typedobject.h  util.cpp  util.h  version.h
src/support/: CMakeLists.txt  dbgscriptsupp.vcxproj  dbgscriptsupp.vcxproj.filters  dsstackframe.cpp  dsthread.cpp  dstypedobject.cpp  outputcallback.cpp  support.props  symcache.cpp  symcache.h  util.cpp  util.h
test/: Makefile  compareresults.bat  dummy.cpp  makedmpcmds.txt  runtest.bat  runtests.bat  t-createtypedptr.txt  t-gettypesize.txt  t-lockdown.txt  t-readstring.txt  t-searchmem.txt  t-setup.txt  t-simple.txt
test/expected/: t-createtypedptr-result.txt  t-gettypesize-result.txt  t-lockdown-result.txt  t-readstring-result.txt  t-searchmem-result.txt  t-simple-result.txt
test/lua/: t-createtypedptr.lua  t-gettypesize.lua  t-readstring.lua  t-searchmem.lua  utils.lua
test/py/: runtests.bat  t-createtypedptr.py  t-gettypesize.py  t-readstring.py  t-searchmem.py  t-simple.py  tests.txt  utils.py
test/rb/: t-createtypedptr.rb  t-gettypesize.rb  t-lockdown.rb  t-readstring.rb  t-searchmem.rb  utils.rb
